Solving H-Scroll From Section About

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
     <div class="container py-5">
       <div class="row">
         <div class="col-md-5">
-          <div class="about-image">
-            <figure class="position-relative z-3">
+          <div class="about-image position-relative">
+            <figure class="z-3">
               <img class="w-100" src="./imgs/hero.jpg" alt="Daniels Photo" />
             </figure>
           </div>
         </div>
-        <div class="col-md-7 px-5">
+        <div class="col-md-7 p-5">
           <div class="about-content pe-5">
             <h2 class="">About Me.</h2>
             <p class="job">UI / UX DESIGNER & WEB DEVELOPER</p>
