Handling Design in About and Contact Section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </figure>
           </div>
         </div>
-        <div class="col-md-7 p-5">
+        <div class="col-md-7 py-5">
           <div class="about-content pe-5">
             <h2 class="">About Me.</h2>
             <p class="job">UI / UX DESIGNER & WEB DEVELOPER</p>
@@ -790,7 +790,7 @@
   <section id="Contact">
     <div class="container py-5">
       <h2 class="text-center position-relative">Contact Us.</h2>
-      <div class="row text-center mt-5 g-3 px-5">
+      <div class="row text-center mt-5 g-3 ">
         <div class="col-lg-4">
           <div class="icons d-flex justify-content-center align-items-center flex-column">
             <div class="icon d-flex justify-content-center align-items-center rounded-circle">
@@ -839,7 +839,7 @@
                   placeholder="Message"></textarea>
               </div>
             </div>
-            <div class="col-12 ">
+            <div class="col-12 d-flex justify-content-start">
               <button type="button" class="btn bg-dark text-white px-4">Submit</button>
             </div>
           </div>
