--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
   <!-- ***************** Start Nav ***************** -->
   <nav id="navbar" class="navbar navbar-expand-lg bg-white fixed-top shadow">
     <div class="container">
-      <a class="navbar-brand" href="#">DANIELS</a>
+      <a class="navbar-brand" href="#Home">DANIELS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item">
@@ -35,7 +36,7 @@
             <a class="nav-link" aria-current="page" href="#Services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#Works">Portfolio</a>
+            <a class="nav-link" aria-current="page" href="#Portfolio">Works</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="#Testimonials">Clients</a>
