--- a/index.html
+++ b/index.html
@@ -19,32 +19,32 @@
   <nav id="navbar" class="navbar navbar-expand-lg bg-white fixed-top shadow">
     <div class="container">
       <a class="navbar-brand" href="#Home">DANIELS</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link active" aria-current="page" href="#Home">Home</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#Services">Services</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#Portfolio">Works</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#Testimonials">Clients</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#Team">Team</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item m-auto">
             <a class="nav-link" aria-current="page" href="#Contact">Contact</a>
           </li>
         </ul>
@@ -86,15 +86,15 @@
   <section id="about">
     <div class="container py-5">
       <div class="row">
-        <div class="col-md-5">
+        <div class="col-lg-5 py-lg-5">
           <div class="about-image position-relative">
             <figure class="z-3">
               <img class="w-100" src="./imgs/hero.jpg" alt="Daniels Photo" />
             </figure>
           </div>
         </div>
-        <div class="col-md-7 py-5">
-          <div class="about-content pe-5">
+        <div class="col-lg-7 py-5">
+          <div class="about-content pe-lg-5">
             <h2 class="">About Me.</h2>
             <p class="job">UI / UX DESIGNER & WEB DEVELOPER</p>
             <p class="description">
