--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <header class="vh-100" id="Home">
     <div class="container">
       <div class="content d-flex justify-content-center align-items-center flex-column vh-100 text-white">
-        <p>Hello</p>
-        <h3 class="mb-5 mt-2 bg-black">I Am</h3>
+        <p class="mt-5">Hello</p>
+        <h3 class="mb-5 mt-2 text-center">I Am</h3>
 
         <ul class="icons list-unstyled d-flex justify-content-center align-items-center">
           <li class="rounded-circle d-flex justify-content-center align-items-center">
