--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/1.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/1.jpg" alt="Web Design Portfolio Image 1">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -279,7 +279,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/2.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/2.jpg" alt="Web Design Portfolio Image 2">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -297,7 +297,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/3.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/3.jpg" alt="Web Design Portfolio Image 3">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -315,7 +315,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/4.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/4.jpg" alt="Web Design Portfolio Image 4">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -333,7 +333,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="Web Design Portfolio Image 5">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -351,7 +351,7 @@
             </div>
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/6.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/6.jpg" alt="Web Design Portfolio Image 6">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -374,7 +374,7 @@
           <div class="row mt-5 g-4">
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/4.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/4.jpg" alt="Web Design Portfolio Image 4">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -393,7 +393,7 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/6.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/6.jpg" alt="Web Design Portfolio Image 6">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -415,7 +415,7 @@
           <div class="row mt-5 g-4">
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/2.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/2.jpg" alt="Web Design Portfolio Image 2">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -434,7 +434,7 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="Web Design Portfolio Image 5">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -457,7 +457,7 @@
           <div class="row mt-5 g-4">
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/1.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/1.jpg" alt="Web Design Portfolio Image 1">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -476,7 +476,7 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/3.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/3.jpg" alt="Web Design Portfolio Image 3">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -495,7 +495,7 @@
 
             <div class="col-lg-4 col-md-6">
               <div class="item border border-0 shadow-sm position-relative">
-                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
+                <img class="w-100" src="./imgs/portfolio/5.jpg" alt="Web Design Portfolio Image 5">
                 <div class="itemLayer position-absolute d-flex justify-content-center align-items-center flex-column">
                   <h3>WEB DESIGN</h3>
                   <div class="itemIcons">
@@ -528,37 +528,37 @@
                   
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img src="./imgs/portfolio/1.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/1.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 1">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>1 of 6</h5>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./imgs/portfolio/2.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/2.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 2">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>2 of 6</h5>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./imgs/portfolio/3.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/3.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 3">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>3 of 6</h5>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./imgs/portfolio/4.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/4.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 4">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>4 of 6</h5>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./imgs/portfolio/5.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/5.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 5">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>5 of 6</h5>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <img src="./imgs/portfolio/6.jpg" class="d-block w-100 my-4" alt="...">
+                      <img src="./imgs/portfolio/6.jpg" class="d-block w-100 my-4" alt="Web Design Portfolio Image 6">
                       <div class="carousel-caption d-none d-md-block">
                         <h5>6 of 6</h5>
                       </div>
@@ -607,7 +607,7 @@
 
                 <div class="carousel-item active pb-5">
                   <div class="contect text-center">
-                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="...">
+                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="Project Owner Photo">
                     <p class="mb-4">
                       Lorem Ipsum has been the industry's standard dummy text ever
                       since the when an unknown printer took a galley of type and
@@ -623,7 +623,7 @@
 
                 <div class="carousel-item active pb-5">
                   <div class="contect text-center">
-                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="...">
+                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="Project Owner Photo">
                     <p class="mb-4">
                       Lorem Ipsum has been the industry's standard dummy text ever
                       since the when an unknown printer took a galley of type and
@@ -635,7 +635,7 @@
                 </div>
                 <div class="carousel-item active pb-5">
                   <div class="contect text-center">
-                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="...">
+                    <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="Project Owner Photo">
                     <p class="mb-4">
                       Lorem Ipsum has been the industry's standard dummy text ever
                       since the when an unknown printer took a galley of type and
@@ -710,7 +710,7 @@
           <div class="inner mt-4">
             <div class="card rounded-top-0 border-0 shadow-sm">
               <div class="card-img position-relative overflow-hidden rounded-0">
-                <img src="./imgs/1.jpg" class="card-img-to p w-100 rounded-0" alt="...">
+                <img src="./imgs/1.jpg" class="card-img-to p w-100 rounded-0" alt="Team Member Front End Developer">
                 <div class="layer position-absolute">
                   <div class="icons d-flex justify-content-center align-items-center h-100">
                     <div class="rounded-circle d-flex justify-content-center align-items-center mx-2"><i
@@ -736,7 +736,7 @@
           <div class="inner mt-4">
             <div class="card rounded-top-0 border-0 shadow-sm">
               <div class="card-img position-relative overflow-hidden rounded-0">
-                <img src="./imgs/2.jpg" class="card-img-to p w-100 rounded-0" alt="...">
+                <img src="./imgs/2.jpg" class="card-img-to p w-100 rounded-0" alt="Team Member Back End Developer">
                 <div class="layer position-absolute">
                   <div class="icons d-flex justify-content-center align-items-center h-100">
                     <div class="rounded-circle d-flex justify-content-center align-items-center mx-2"><i
@@ -762,7 +762,7 @@
           <div class="inner mt-4">
             <div class="card rounded-top-0 border-0 shadow-sm">
               <div class="card-img position-relative overflow-hidden rounded-0">
-                <img src="./imgs/1.jpg" class="card-img-to p w-100 rounded-0" alt="...">
+                <img src="./imgs/1.jpg" class="card-img-to p w-100 rounded-0" alt="Team Member Front End Developer">
                 <div class="layer position-absolute">
                   <div class="icons d-flex justify-content-center align-items-center h-100">
                     <div class="rounded-circle d-flex justify-content-center align-items-center mx-2"><i
