handle Carousel in Testimonials Section

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 
 
 
-                <div class="carousel-item active pb-5">
+                <div class="carousel-item pb-5">
                   <div class="contect text-center">
                     <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="Project Owner Photo">
                     <p class="mb-4">
@@ -633,7 +633,7 @@
                     <h5 class="mb-4">Envato Customer</h5>
                   </div>
                 </div>
-                <div class="carousel-item active pb-5">
+                <div class="carousel-item pb-5">
                   <div class="contect text-center">
                     <img src="./imgs/1_New1.jpg" class="d-block img-fluid rounded-circle m-auto mb-4" alt="Project Owner Photo">
                     <p class="mb-4">
